<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        tools:context=".RegistrationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edittext_margin_top"

            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/edittext_margin_top"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Male" />


            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />

        </RadioGroup>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:text="@string/regisster_text" />
        <TextView
            android:id="@+id/alreadyregistered"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/alreadyRegistered"/>
    </LinearLayout>

</LinearLayout>